--- a/src/test/resources/data/saveData.html
+++ b/src/test/resources/data/saveData.html
@@ -1,36 +1,41 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>saveData</title>
-</head>
-<body>
-    <article
-        id="electric-cars"
-        data-columns="3"
-        data-index-number="12314"
-        data-parent="cars">
-    </article>
-    <table>
-        <thead>
-            <tr>
-                <th scope="col">Serial Number</th>
-                <th scope="col">Name</th>
-                <th scope="col">Value</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>A-XB1-24A-XY3</td>
-                <td>Xbox Series X</td>
-                <td>$1499.00</td>
-            </tr>
-            <tr>
-                <td>S-40A-ZBD-E47</td>
-                <td>Samsung TV</td>
-                <td>$599.99</td>
-            </tr>
-        </tbody>
-    </table>
-</body>
+ <head>
+  <style type="text/css">
+table, td {
+border: 1px solid #333;
+}
+thead, tfoot {
+background-color: #333;
+color: #fff;
+}
+</style>
+  <meta charset="UTF-8">
+  <title>saveData</title>
+ </head>
+ <body>
+  <table>
+   <thead>
+    <tr>
+     <th scope="col">Serial Number</th>
+     <th scope="col">Name</th>
+     <th scope="col">Value</th>
+    </tr>
+   </thead>
+   <tbody>
+    <tr>
+     <td>A-XB1-24A-XY3</td>
+     <td>Xbox Series X</td>
+     <td>$1499.00</td>
+     <td hidden>1499.0</td>
+    </tr>
+    <tr>
+     <td>S-40A-ZBD-E47</td>
+     <td>Samsung TV</td>
+     <td>$599.99</td>
+     <td hidden>599.99</td>
+    </tr>
+   </tbody>
+  </table>
+ </body>
 </html>
