we did saving and loading boys!

--- a/src/test/resources/data/testData.html
+++ b/src/test/resources/data/testData.html
@@ -1,1 +1,33 @@
-<!doctype html><html lang="en"><head><style type="text/css">table, td {border: 1px solid #333;}thead, tfoot {background-color: #333;color: #fff;}</style><meta charset="UTF-8"><title>saveData</title></head><body><table><thead><tr><th scope="col">Serial Number</th><th scope="col">Name</th><th scope="col">Value</th></tr></thead><tbody><tr><td>A-XB1-24A-XY3</td><td>Xbox Series X</td><td>$1499.00</td><td hidden>1499.0</td></tr><tr><td>S-40A-ZBD-E47</td><td>Samsung TV</td><td>$599.99</td><td hidden>599.99</td></tr></tbody></table></body></html>
+<!doctype html>
+<html lang="en">
+ <head>
+  <style type="text/css">table, td {border: 1px solid #333;}thead, tfoot {background-color: #333;color: #fff;}</style>
+  <meta charset="UTF-8">
+  <title>saveData</title>
+ </head>
+ <body>
+  <table>
+   <thead>
+    <tr>
+     <th scope="col">Serial Number</th>
+     <th scope="col">Name</th>
+     <th scope="col">Value</th>
+    </tr>
+   </thead>
+   <tbody>
+    <tr>
+     <td>A-XB1-24A-XY3</td>
+     <td>Xbox Series X</td>
+     <td>$1499.00</td>
+     <td hidden>1499.0</td>
+    </tr>
+    <tr>
+     <td>S-40A-ZBD-E47</td>
+     <td>Samsung TV</td>
+     <td>$599.99</td>
+     <td hidden>599.99</td>
+    </tr>
+   </tbody>
+  </table>
+ </body>
+</html>
